--- a/secrets.toml
+++ b/secrets.toml
@@ -1,1 +1,2 @@
-
+[connections.gsheets]
+spreadsheet = "https://docs.google.com/spreadsheets/d/1Bs-YF1pQIYvMMD8Gn7FKkAcqZvMcAgyN_g2cjvDI8Yw/edit#gid=0"
