--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ pandas
 pydeck
 streamlit
 streamlit-gsheets
+streamlit==1.28
+git+https://github.com/streamlit/gsheets-connection
+pandasql  # this is for example/st_app.py only
